# orbit-lang

./: .gitignore  .repomixignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Install-OrbitApply.ps1  LICENSE  MANIFESTO.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REALTIME_OPTIMIZATIONS.md  SECURITY.md  SPRINT_1_PHASE2.md  STATUS.md  VERSION.txt  benchmark.orb  build.zig  build.zig.zon  check_dump_pe_dirs.ps1  check_obj_relocs.ps1  check_pe_imports.ps1  check_reloc_dir.ps1  check_smoke_out_dirs.ps1  check_time.zig  compare_dirs.ps1  compare_headers.ps1  compare_mz.ps1  compare_section_details.ps1  compare_sizes.ps1  compare_versions.ps1  compiler_bootstrap.orb  compiler_prep.orb  compiler_self_hosting.orb  diff_headers.ps1  dump_pe.c  dump_syms.ps1  dump_syms.zig  install.ps1  manual_test.orb  (+18 more)
benchmarks/: .gitignore  BENCHMARK_QA.md  README.md  build.zig  fib.js  fib.orb  fib.py  run_benchmarks.ps1
benchmarks/http/: Cargo.toml  server.c  server.cpp  server.go  server.js  server.orb  server.py  server.rs
compiler/: ast.orb  builder.orb  c_backend.orb  ir.orb  lexer.orb  main.orb  parser.orb  sema.orb  token.orb
docs/: ARCHITECTURE.md  INTRODUCTION.md  LANGUAGE_REFERENCE.md  PRODUCTION_DEPLOYMENT.md  README.md  SYNTAX_GUIDE.md  SYNTAX_REFERENCE.md
examples/: README.md  catalog_service.orb  health_service.orb  orbit_full_expansion.orb  sqlite_notes.orb
scripts/: clean_workspace.ps1  install-linux.sh  install.ps1  install.sh  run_bootstrap_regressions.ps1  run_ci_gate.ps1  validate_bootstrap_stage0.ps1  validate_cli_fixture.ps1  (+4 more)
(+217 files in other folders)
