[package]
name = "orbit-bench-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_rust"
path = "server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
